--- a/config/database.yml
+++ b/config/database.yml
@@ -78,9 +78,6 @@ test:
 #
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
-#
 production:
   <<: *default
-  database: gtai_backend_production
-  username: gtai_backend
-  password: <%= ENV["GTAI_BACKEND_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
